--- a/JS-Projects/FileMaker/src/style.css
+++ b/JS-Projects/FileMaker/src/style.css
@@ -2,8 +2,10 @@
 
 body {
     font-family: "Nunito", sans-serif;
+    background-color: palegoldenrod;
 }
 
-#pswrd {
+
+input {
     background-color: powderblue;
 }
