--- a/JS-Projects/FileMaker/src/style.css
+++ b/JS-Projects/FileMaker/src/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-body {
+html {
     font-family: "Nunito", sans-serif;
     background-color: palegoldenrod;
 }
