--- a/JS-Projects/FileMaker/src/style.css
+++ b/JS-Projects/FileMaker/src/style.css
@@ -4,6 +4,11 @@ body {
     font-family: "Nunito", sans-serif;
     background-color: palegoldenrod;
 }
+.form {
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 5%;
+}
 
 
 input {
