--- a/JS-Projects/FileMaker/src/sass/mystyles.scss
+++ b/JS-Projects/FileMaker/src/sass/mystyles.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 //own
-$mybackgroundcolor: #c0dbf5;
+$mybackgroundcolor: #73b4f1;
 
 //predefined
 $body-background-color: $mybackgroundcolor;
