--- a/JS-Projects/FileMaker/src/sass/mystyles.scss
+++ b/JS-Projects/FileMaker/src/sass/mystyles.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 //own
-$mybackgroundcolor: #1e4b0a;
+$mybackgroundcolor: #7b9e6c;
 
 //predefined
 $body-background-color: $mybackgroundcolor;
