--- a/Websites/Website/Register/sass/mystyles.scss
+++ b/Websites/Website/Register/sass/mystyles.scss
@@ -4,6 +4,17 @@
 
 //own
 
+.form {
+    margin-right: 5%;
+    margin-left: 5%;
+    margin-top: 5%;
+}
+
+
+input {
+    background-color: rgb(211, 203, 128);
+}
+
 html {
     background-image: url(background.jpg)
 }
