--- a/Websites/Website/cssdesign/css/mystyles.css
+++ b/Websites/Website/cssdesign/css/mystyles.css
@@ -11,6 +11,21 @@ html {
 .green-text {
   color: green; }
 
+.bar {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100px;
+  background-color: #33434D; }
+
+.logo {
+  top: 0px;
+  left: 0px; }
+
+html {
+  background-color: #41aea9; }
+
 @keyframes bg-blur {
   from {
     filter: blur(0px); }
