--- a/Websites/Website/cssdesign/sass/mystyles.scss
+++ b/Websites/Website/cssdesign/sass/mystyles.scss
@@ -35,6 +35,12 @@ input {
     left: 0px;
 }
 
+.unblur {
+    animation-name: textblur;
+    animation-duration: 3s;
+}
+
+
 
 @keyframes bg-blur {
     from {
