--- a/Websites/Website/cssdesign/css/mystyles.css
+++ b/Websites/Website/cssdesign/css/mystyles.css
@@ -23,6 +23,10 @@ input {
   top: 0px;
   left: 0px; }
 
+.unblur {
+  animation-name: textblur;
+  animation-duration: 3s; }
+
 @keyframes bg-blur {
   from {
     filter: blur(0px); }
