--- a/Websites/Website/cssdesign/css/mystyles.css
+++ b/Websites/Website/cssdesign/css/mystyles.css
@@ -27,6 +27,9 @@ input {
   animation-name: textblur;
   animation-duration: 3s; }
 
+.invisible {
+  display: none; }
+
 @keyframes bg-blur {
   from {
     filter: blur(0px); }
