--- a/Websites/Website/cssdesign/sass/mystyles.scss
+++ b/Websites/Website/cssdesign/sass/mystyles.scss
@@ -75,12 +75,16 @@ input:focus{
     opacity: 1.0;
 }
 
-.grey-text {
-    color: #33434F;
+.white-text {
+    color: white;
 }
 
 .red-text {
-    color: red;
+    color: red; 
+}
+
+.display_none {
+    display: none;
 }
 
 //predefined
