--- a/Websites/Glade/cssdesign/css/mystyles.css
+++ b/Websites/Glade/cssdesign/css/mystyles.css
@@ -12,7 +12,9 @@
   height: 75px; }
 
 .nav_register {
-  color: black; }
+  position: fixed;
+  right: 0%;
+  top: 0%; }
 
 .nav_button {
   height: 75px;
@@ -22,9 +24,9 @@
   position: fixed;
   left: 0%;
   top: 0%;
-  height: 100px;
-  width: 100px;
-  background-image: url("../logo.png"); }
+  height: 75px;
+  width: 75px;
+  background-image: url("75px_logo.png"); }
 
 input {
   background-color: #d3cb80; }
