--- a/JS-Projects/Calculator/style.css
+++ b/JS-Projects/Calculator/style.css
@@ -1,6 +1,25 @@
+.container {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+.font {
+    font-family: 'Victor Mono';
+}
+
 .ipt {
     width: 300px;
     height: 30px;
-    background-color: darkcyan;
+    background-color: White;
     border: none;
+}
+
+html {
+    background: url('background.jpg');
+    height: 100%;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
