Login page almost finished, login.js almost finished

--- a/Websites/Glade/CSSdesign/sass/mystyles.scss
+++ b/Websites/Glade/CSSdesign/sass/mystyles.scss
@@ -31,7 +31,7 @@
     top: 0%;
     height: 75px;
     width: 75px;
-    background-image: url('75px_logo.png');
+    background-image: url('../resources/75px_logo.png');
 }
 .nav_login {
     position: relative;
