--- a/Websites/Glade/CSSdesign/sass/mystyles.scss
+++ b/Websites/Glade/CSSdesign/sass/mystyles.scss
@@ -29,6 +29,7 @@
     position: fixed;
     left: 0%;
     top: 0%;
+    border: none;
     height: 75px;
     width: 75px;
     background-image: url('../resources/75px_logo.png');
