--- a/Websites/Glade/Register/register.css
+++ b/Websites/Glade/Register/register.css
@@ -34,6 +34,7 @@
     right: -5%;
     z-index: -1;
     display: block;
+    z-index: -1;
     /* Full height */
     width: 110%;
     height: 110%;
