--- a/Websites/Calculator/style.css
+++ b/Websites/Calculator/style.css
@@ -9,9 +9,22 @@
 }
 
 .ipt {
+    border: none;
     width: 300px;
     height: 30px;
-    background-color: White;
+    background: rgb(255, 255, 255);
+}
+
+.calculator {
+    background-position: center;
+    position: absolute;
+    -index: 15;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -150px;
+}
+
+.number {
     border: none;
 }
 
